# rs-cosmocli

./: Cargo.toml  Makefile.toml  README.md
src/: main.rs
src/clients/: app.rs  cosmosdb.rs  mod.rs  opts.rs
src/commands/backup/: mod.rs
